----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2005-02-24 Alexander M. Turek  <me@derrabus.de>
    * libraries/grab_globals.lib.php: Fixed the fix, thanks to Marc. :-)

2005-02-23 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/auth/cookie.auth.lib.php: bug #1149373, error when
      blowfish_secret is empty

2005-02-23 Alexander M. Turek  <me@derrabus.de>
    * libraries/grab_globals.lib.php: More hotfixes against bug #1149381.
    * libraries/mysql_charsets.lib.php: Detection for new Japanese charsets
      (cp932 and eucjpms) that will be introduced with MySQL 5.0.3.
    * libraries/select_lang.lib.php: Removed the UTF-8 deactivation code that
      we had already commented out a long time ago.

2005-02-22 Alexander M. Turek  <me@derrabus.de>
    * libraries/grab_globals.lib.php: Hotfix against bug #1149381 and parts
      of bug #1149383.

2005-02-21 Marc Delisle  <lem9@users.sourceforge.net>
    * pdf_pages.php: patch #1120466 (modified): optional column names
      in visual scratchboard, thanks to Remco Aalbers - remcoa

2005-02-17 Marc Delisle  <lem9@users.sourceforge.net>
    * header.inc.php, queryframe.php: HTML improvement, 
      thanks to Armel Fauveau
    * server_privileges.php: bug #1113788, escaping character removed by error

2005-02-16 Alexander M. Turek  <me@derrabus.de>
    * db_details_export.php: Views are not exportable yet.
    * themes/*/css/theme_right.css.php: Allow to mark a whole row as disabled.
    * server_engines.php: Use new CSS class 'disabled' for unavailable
      engines.

2005-02-14 Michal Čihař  <michal@cihar.com>
    * tbl_printview.php, libraries/tbl_indexes.lib.php: Fix displaying
      indexes for print view, use same function as for normal view (bug
      #1119388).
    * css/print.css, libraries/tbl_indexes.lib.php,
      libraries/header_meta_style.inc.php: Use CSS for hiding print button
      rather than javascript.
